--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Christine Y. | Portfolio website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello here is my portfolio</h1>
-    <p>Here is some content</p>
+
+<div id="header">
+    <div class="container">
+        <nav>
+        <img src="images/logo.png" class="logo">
+        <ul>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+        </nav>
+    </div>
+</div>
+
 </body>
 </html>
