--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <img src="images/project-01.png">
             </div>
             <div class="work">
-                <img src="images/project-02.jpg">
+                <img src="images/project-02.png">
             </div>
             <div class="work">
                 <img src="images/project-03.jpg">
