--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<!-- --------about-------- -->
+<!-- --------------------------------about-------------------------------- -->
 
 <div id="about">
     <div class="container">
@@ -74,14 +74,14 @@
     </div>
 </div>
 
-<!-- -----------services----------- -->
+<!-- --------------------------------services-------------------------------- -->
 
 <div id="services">
     <div class="container">
         <h1 class="sub-title">My Services</h1>
         <div class="services-list">
             <div>
-                <i class="fa-regular fa-fire"></i>
+                <i class="fa-solid fa-desktop"></i>
                 <h2>UI Design</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos commodi accusamus sint porro molestiae minus, 
                     doloribus velit delectus deserunt perferendis hic fuga, ab, aut fugiat saepe dolorum magni sunt. Ratione?</p>
@@ -95,7 +95,7 @@
                 <a href="#">Learn More</a>
             </div>
             <div>
-                <i class="fa-regular fa-tree"></i>
+                <i class="fa-solid fa-palette"></i>
                 <h2>Visual Design</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos commodi accusamus sint porro molestiae minus, 
                     doloribus velit delectus deserunt perferendis hic fuga, ab, aut fugiat saepe dolorum magni sunt. Ratione?</p>
@@ -105,7 +105,7 @@
     </div>
 </div>
 
-<!-- ----------portfolio----------- -->
+<!-- --------------------------------portfolio-------------------------------- -->
 
 <div id="portfolio">
     <div class="container">
@@ -113,17 +113,36 @@
         <div class="work-list">
             <div class="work">
                 <img src="images/project-01.png">
+                <div class="layer">
+                    <h3>S.NEST | Desktop software</h3>
+                    <p>UI/UX Design, 2021-2022</p>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
             </div>
             <div class="work">
                 <img src="images/project-02.png">
+                <div class="layer">
+                    <h3>Skywatch | Web app</h3>
+                    <p>UI/UX Design, 2022/01-03</p>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
             </div>
             <div class="work">
                 <img src="images/project-03.jpg">
+                <div class="layer">
+                    <h3>Dresswell | Mobile app</h3>
+                    <p>UI/UX Design, 2020</p>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
             </div>
             <div class="work">
                 <img src="images/project-04.png">
+                <div class="layer">
+                    <h3>Daily UI</h3>
+                    <p>UI/UX Design, 2020</p>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
             </div>
-            
         </div>
     </div>
 </div>
