--- a/index.html
+++ b/index.html
@@ -144,10 +144,26 @@
                 </div>
             </div>
         </div>
+        <a href="#" class="btn">Load More</a>
     </div>
 </div>
 
+<!-- --------------------------------contact-------------------------------- -->
 
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact me</h1>
+                <p>ching2320@gmail.com</p>
+                <div class="social-icons">
+                    
+                </div>
+            </div>
+            <div class="contact-left"></div>
+        </div>
+    </div>
+</div>
 
 <script>
 
