--- a/index.html
+++ b/index.html
@@ -155,13 +155,26 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact me</h1>
-                <p>ching2320@gmail.com</p>
+                <p><i class="fa-solid fa-paper-plane"></i> ching2320@gmail.com</p>
                 <div class="social-icons">
-                    
+                    <a href="https://linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fa-brands fa-square-behance"></i></a>
+                    <a href=""><i class="fa-brands fa-dribbble"></i></i></a>
                 </div>
+                <a href="images/" download class="btn btn2">Download CV</a>
             </div>
-            <div class="contact-left"></div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your name" required>
+                    <input type="email" name="Email" placeholder="Your email" required>
+                    <textarea name="Message" rows="6" placeholder="Your message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+            </div>
         </div>
+    </div>
+    <div class="copyright">
+        <p>Copyright © Christine Y.</p>
     </div>
 </div>
 
