--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <div class="container">
         <nav>
         <img src="images/logo.png" class="logo">
-        <ul>
-            <li><a href="#">Work</a></li>
+        <ul id="sidemenu">
             <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+            <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
+        <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
             <p>Nice to meet you!</p>
@@ -178,6 +182,8 @@
     </div>
 </div>
 
+
+
 <script>
 
     var tablinks = document.getElementsByClassName("tab-links");
@@ -192,6 +198,19 @@
         }
         event.currentTarget.classList.add("active-link");
         document.getElementById(tabname).classList.add("active-tab");
+    }
+
+</script>
+
+<script>
+
+    var sidemenu = document.getElementById("sidemenu");
+
+    function openmenu(){
+        sidemenu.style.right = "0";
+    }
+    function closemenu(){
+        sidemenu.style.right = "-200px";
     }
 
 </script>
