--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="layer">
                         <h3>S.NEST | Desktop software</h3>
                         <p>UI/UX Design, 2021-2022</p>
-                        <a href="https://www.figma.com/proto/htcja3oeByumavOc7gqxds/S.NEST-%7C-Desktop-Software?page-id=310%3A5173&node-id=420%3A11334&viewport=515%2C365%2C0.04&scaling=scale-down-width&starting-point-node-id=310%3A8360"
+                        <a href="https://www.figma.com/file/CEeDvmc9xp2x4150fQ11Su/S.NEST?node-id=0%3A1&t=n0PC7heA4kFsZ1sf-1"
                             target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="layer">
                         <h3>Skywatch | Web app</h3>
                         <p>UI/UX Design, 2022/01-03</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.figma.com/file/IDkZpIp0K6oibHmgloLf5e/Skywatch?node-id=2%3A8503&t=gIqLzK1eQaz5ArMq-1" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -153,7 +153,7 @@
                     <div class="layer">
                         <h3>Dresswell | Mobile app</h3>
                         <p>UI/UX Design, 2020</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.figma.com/file/4VTDM4BWsr6WnuXJW8Lzoo/Dresswell?node-id=113%3A0&t=xvQIZ0jGu0ULzJfc-1" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -161,7 +161,7 @@
                     <div class="layer">
                         <h3>Daily UI</h3>
                         <p>UI/UX Design, 2020</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://dribbble.com/ching2320" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                     <p><i class="fa-solid fa-paper-plane"></i><a href="mailto:ching2320@gmail.com"> ching2320@gmail.com
                         </a></p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/yulin-yeh-a487a81b0/" target="_blank"><i
+                        <a href="https://www.linkedin.com/in/yulin-yeh" target="_blank"><i
                                 class="fa-brands fa-linkedin"></i></a>
                         <a href="https://www.behance.net/ching23200cb2" target="_blank"><i
                                 class="fa-brands fa-square-behance"></i></a>
