--- a/index.html
+++ b/index.html
@@ -97,29 +97,17 @@
                 <div>
                     <i class="fa-solid fa-desktop"></i>
                     <h2>UI Design</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos commodi accusamus sint porro
-                        molestiae minus,
-                        doloribus velit delectus deserunt perferendis hic fuga, ab, aut fugiat saepe dolorum magni sunt.
-                        Ratione?</p>
-                    <a href="#">Learn More</a>
+                    <p>Specialize in wireframes, hi-fi prototypes, interactions, and comprehensive design systems. We can help you create a user-friendly interface that is visually appealing and consistent across your digital product.</p>
                 </div>
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos commodi accusamus sint porro
-                        molestiae minus,
-                        doloribus velit delectus deserunt perferendis hic fuga, ab, aut fugiat saepe dolorum magni sunt.
-                        Ratione?</p>
-                    <a href="#">Learn More</a>
+                    <p>Offer services such as site map design, responsive web design (RWD), and online shop creation to showcase your brand and products.</p>
                 </div>
                 <div>
                     <i class="fa-solid fa-palette"></i>
                     <h2>Visual Design</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos commodi accusamus sint porro
-                        molestiae minus,
-                        doloribus velit delectus deserunt perferendis hic fuga, ab, aut fugiat saepe dolorum magni sunt.
-                        Ratione?</p>
-                    <a href="#">Learn More</a>
+                    <p>Encompass logo and business card design, as well as hard materials like packaging and documents. Additionally, I offer illustration services to further elevate your brand's visual identity. </p>
                 </div>
             </div>
         </div>
@@ -145,7 +133,7 @@
                     <div class="layer">
                         <h3>Skywatch | Web app</h3>
                         <p>UI/UX Design, 2022/01-03</p>
-                        <a href="https://www.figma.com/file/IDkZpIp0K6oibHmgloLf5e/Skywatch?node-id=2%3A8503&t=gIqLzK1eQaz5ArMq-1" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.figma.com/file/awN9ZFvmJUv4ZqMsV3MjtG/Web-app-%7C-Skywatch?node-id=0%3A1&t=tOpEjlBaXALW6Aey-1" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
