--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div>
                     <i class="fa-solid fa-desktop"></i>
                     <h2>UI Design</h2>
-                    <p>Specialize in wireframes, hi-fi prototypes, interactions, and comprehensive design systems. We can help you create a user-friendly interface that is visually appealing and consistent across your digital product.</p>
+                    <p>Specialize in wireframes, hi-fi prototypes, interactions, and comprehensive design systems. Create a user-friendly interface that is visually appealing and consistent across your digital product.</p>
                 </div>
                 <div>
                     <i class="fa-solid fa-code"></i>
